changes to comments

--- a/samples/dwelling/dwelling_training.ipynb
+++ b/samples/dwelling/dwelling_training.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -43,7 +45,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -58,7 +62,7 @@
    "source": [
     "\"\"\"\n",
     "Mask R-CNN\n",
-    "Train on the toy Balloon dataset and implement color splash effect.\n",
+    "Train on the dwelling dataset.\n",
     "\n",
     "Copyright (c) 2018 Matterport, Inc.\n",
     "Licensed under the MIT License (see LICENSE for details)\n",
@@ -73,16 +77,16 @@
     "    python3 dwelling.py train --dataset=/images --weights=coco\n",
     "\n",
     "    # Resume training a model that you had trained earlier\n",
-    "    python3 balloon.py train --dataset=/path/to/balloon/dataset --weights=last\n",
+    "    python3 dwelling.py train --dataset=/path/to/dwelling/dataset --weights=last\n",
     "\n",
     "    # Train a new model starting from ImageNet weights\n",
-    "    python3 balloon.py train --dataset=/path/to/balloon/dataset --weights=imagenet\n",
+    "    python3 dwelling.py train --dataset=/path/to/dwelling/dataset --weights=imagenet\n",
     "\n",
     "    # Apply color splash to an image\n",
-    "    python3 balloon.py splash --weights=/path/to/weights/file.h5 --image=<URL or path to file>\n",
+    "    python3 dwelling.py splash --weights=/path/to/weights/file.h5 --image=<URL or path to file>\n",
     "\n",
     "    # Apply color splash to video using the last weights you trained\n",
-    "    python3 balloon.py splash --weights=last --video=<URL or path to file>\n",
+    "    python3 dwelling.py splash --weights=last --video=<URL or path to file>\n",
     "\"\"\"\n",
     "\n",
     "import os\n",
@@ -119,7 +123,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -186,13 +192,13 @@
     "\n",
     "\n",
     "class DwellingConfig(Config):\n",
-    "    \"\"\"Configuration for training on the toy  dataset.\n",
+    "    \"\"\"Configuration for training on the  dataset.\n",
     "    Derives from the base Config class and overrides some values.\n",
     "    \"\"\"\n",
     "    # Give the configuration a recognizable name\n",
     "    NAME = \"dwelling\"\n",
     "\n",
-    "    # We use a GPU with 12GB memory, which can fit two images.\n",
+    "    # We use a GPU, which can fit two images.\n",
     "    # Adjust down if you use a smaller GPU.\n",
     "    IMAGES_PER_GPU = 2\n",
     "\n",
@@ -241,7 +247,7 @@
     "class DwellingDataset(utils.Dataset):\n",
     "\n",
     "    def load_dwelling(self, dataset_dir, subset):\n",
-    "        \"\"\"Load a subset of the Balloon dataset.\n",
+    "        \"\"\"Load a subset of the dwelling dataset.\n",
     "        dataset_dir: Root directory of the dataset.\n",
     "        subset: Subset to load: train or val\n",
     "        \"\"\"\n",
@@ -254,7 +260,7 @@
     "\n",
     "        # Load annotations\n",
     "        # VGG Image Annotator saves each image in the form:\n",
-    "        # { 'filename': '28503151_5b5b7ec140_b.jpg',\n",
+    "        # { 'filename': 'dwelling004.jpg',\n",
     "        #   'regions': {\n",
     "        #       '0': {\n",
     "        #           'region_attributes': {},\n",
@@ -276,7 +282,7 @@
     "\n",
     "        # Add images\n",
     "        for a in annotations:\n",
-    "            # Get the x, y coordinaets of points of the polygons that make up\n",
+    "            # Get the x, y coordinates of points of the polygons that make up\n",
     "            # the outline of each object instance. There are stores in the\n",
     "            # shape_attributes (see json format above)\n",
     "            polygons = [r['shape_attributes'] for r in a['regions'].values()]\n",
@@ -302,7 +308,7 @@
     "            one mask per instance.\n",
     "        class_ids: a 1D array of class IDs of the instance masks.\n",
     "        \"\"\"\n",
-    "        # If not a balloon dataset image, delegate to parent class.\n",
+    "        # If not a dwelling dataset image, delegate to parent class.\n",
     "        image_info = self.image_info[image_id]\n",
     "        if image_info[\"source\"] != \"dwelling\":\n",
     "            return super(self.__class__, self).load_mask(image_id)\n",
@@ -10015,9 +10021,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_tensorflow_p36)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -10030,6 +10036,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.6"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
